--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- For deploy on local server-->
 
   <!-- For deploy on github pages-->
-  <!--<base href="./">-->
+  <base href="./">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
