Update file permissions and modify HTML structure for consistency

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 
   <!-- For deploy on local server-->
-  <!--<base href="/">-->
+  <base href="./">
 
   <!-- For deploy on github pages-->
-  <base href="./"
+  <!--<base href="./">-->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
