--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Favicon -->
   <link rel="icon" type="./image/png" href="./assets/icon/icon.png"/>
 
-  <title>Where is my Fossil?</title>
+  <title>Where is my fossil?</title>
   <link rel="manifest" href="./manifest.json">
 
   <!-- Google Sign-In meta tag -->
