--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <!-- For deploy on local server-->
-  <base href="./">
+  <base href="/">
 
   <!-- For deploy on github pages-->
   <!--<base href="./">-->
@@ -21,7 +21,7 @@
   <!-- Favicon -->
   <link rel="icon" type="./image/png" href="./assets/icon/icon.png"/>
 
-  <title>Where is my fossil?</title>
+  <title>where_is_my_fossil</title>
   <link rel="manifest" href="./manifest.json">
 
   <!-- Google Sign-In meta tag -->
