--- a/WIMF.html
+++ b/WIMF.html
@@ -3,7 +3,7 @@
 <head>
 
   <!-- For deploy on local server-->
-  <base href="/">
+  <base href="./">
 
   <!-- For deploy on github pages-->
   <!--<base href="./">-->
